--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ justify-content: center;
 align-items: center;
 width: 100%;
 height: 90vh;
-background: url(/img/wallpaper2.jpg), rgba(0, 0, 0, 30%);
+background: url(img/wallpaper2.jpg), rgba(0, 0, 0, 30%);
 background-blend-mode: multiply;
 background-size: cover;
 background-position: center center;
@@ -252,7 +252,7 @@ justify-content: center;
 align-items: center;
 border: 1px solid black;
 color: black;
-background: url(/img/section.jpg), rgba(0, 0, 0, 75%);
+background: url(img/section.jpg), rgba(0, 0, 0, 75%);
 background-blend-mode: multiply;
 background-repeat: no-repeat;
 background-size: cover;
@@ -510,7 +510,7 @@ justify-content: center;
 align-items: center;
 width: 100%;
 height: 100vh;
-background: url(/img/wallpaper2.jpg), rgba(0, 0, 0, 30%);
+background: url(img/wallpaper2.jpg), rgba(0, 0, 0, 30%);
 background-blend-mode: multiply;
 background-size: cover;
 background-position: center center;
@@ -623,7 +623,7 @@ justify-content: center;
 align-items: center;
 border: 1px solid black;
 color: black;
-background: url(/img/section.jpg), rgba(0, 0, 0, 45%);
+background: url(img/section.jpg), rgba(0, 0, 0, 45%);
 background-blend-mode: multiply;
 background-size: cover;
 width: 100vw;
