--- a/styles.css
+++ b/styles.css
@@ -453,6 +453,15 @@ font-size: 40px;
 /*Variables*/
 
 @media screen and (min-width: 1020px) {
+* {
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+font-family: "Open Sans", sans-serif;
+font-weight: lighter;
+scroll-behavior: smooth;
+
+}
 header {
 display: flex;
 flex-flow: row wrap;
@@ -749,132 +758,54 @@ display: flex;
 margin-top: 8px;
 align-self: flex-start;
 }
-.carrito-h1{
-display: flex;
-width: 100vw;
-text-transform: uppercase;
-font-size: 30px;
-flex-flow: row wrap;
-justify-content: center;
-margin-bottom: 50px;
-margin-top: 40px;
-}
-.carrito{
-display: flex;
-align-self: center;    
-flex-direction: row;
-justify-content: center;
-border-radius: 10px;
-width: 100vw;
-height: 35vh;
-margin-bottom: 20px;
 
-}
-.carrito h1{
-text-align: center;
-text-transform: uppercase;
-font-weight: lighter;
-border-bottom: 1px solid black;
-margin-bottom: 20px;
-}
 
-.productos-car{
-width: 20vw; 
-border: 1px solid var(--second-color); 
-display: flex; 
-flex-flow: column wrap;
-}
-#elements{
+/* CARRITO */
+.shopping-cart{
     display: flex;
     flex-flow: column wrap;
+    align-self: center;
+    justify-self: center;
+    width: 100vw;
+}
+.shopping-cart > .container{
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+
+}
+.text-center {
+    display: inherit;
     justify-content: center;
+}
+.row{
+    display: inherit;
+    justify-content: space-around;
+    font-weight: bolder;
+    font-size: 2vw;
+}
+
+
+.shopping-cart-price{
+margin-left: 120px;
+}
+
+.shoppingCartItem{
+    display: flex;
     align-items: center;
-    text-align: center;
-    line-height: 30px;
-    text-transform: uppercase;
-}
-.precio{
+    justify-content:space-between;
 
-width: 20vw;
-border: 1px solid var(--second-color); 
-display: flex; 
-flex-flow: column wrap;
-}
-
-#price{
-display: flex;
-flex-flow: column wrap;
-justify-content: center;
-align-items: center;
-text-align: center;
-line-height: 30px;
-}
-
-.ctd{
-width: 20vw; 
-border: 1px solid var(--second-color); 
-display: flex; 
-flex-direction: column
-}
-
-#quantity{
-display: flex;
-flex-flow: column wrap;
-justify-content: center;
-align-items: center;
-text-align: center;
-line-height: 30px;
-text-transform: uppercase;}
-
-.contenedor-total{
-display: flex;
-flex-flow: row wrap;
-}
-.subtotal{
-width: 100%; 
-height: 85%; 
-display: flex; 
-border: 1px solid var(--second-color);
-flex-direction: column
-}
-.pay-sect{
-display: flex;
-flex-flow: row wrap;
-width: 100%;
-height: 15%;
-justify-content: space-between;
-border: 1px solid black;
-}
-.car-total{
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-flex-wrap: wrap;
-align-items: baseline;
-}
-.car-total > h1{
-margin-right:6px ;
-border: none;
 
 }
 
-.car-btn{
-display: flex;
-width: 100vw;
-flex-flow: row wrap;
-justify-content: space-evenly;
-margin-bottom: 20px;
-}
-
-.car-btn > button{
-width: 7em;
-height: 3.5vh;
-border-radius: 10%;
-background: var(--first-color);
-color: #fff;
-font-family: inherit;
+.shopping-cart-total{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 60vw;
 
 }
+
 .suscribe {
 display: flex;
 flex-wrap: wrap;
@@ -941,4 +872,5 @@ transition: all 0.5s;
 footer > div > a:hover {
 font-size: 40px;
 }
+
 }
