--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic);
 
+
 /*Variables*/
 
 :root {
@@ -67,8 +68,16 @@ border-bottom: 1px solid #dedede;
 
 .nav-img {
 display: flex;
+flex-flow: column wrap;
 justify-content: center;
 width: 100%;
+align-items: center;
+}
+.nav-img > img{
+order: -1;
+}
+.nav-img > a:visited{
+color: var(--black-color);
 }
 .nav-enlaces {
 display: flex;
@@ -154,8 +163,8 @@ margin: 20px;
 text-shadow: 5px 0 10px #000;
 }
 
-.text-principal > button {
-max-width: 200px;
+.text-principal > a {
+max-width:200px;
 padding: 4px;
 font-size: 15px;
 }
@@ -381,6 +390,87 @@ font-size: 40px;
 display: flex;
 margin-top: 8px;
 }
+/* CARRITO */
+.shopping-cart{
+display: flex;
+flex-flow: column wrap;
+background-color: var(--first-color);
+color: #fff;
+width: 100%;
+}
+.shopping-cart > .container{
+display: flex;
+flex-flow: column wrap;
+width: 100%;
+
+
+}
+.text-center {
+display: inherit;
+justify-content: center;
+width: 100%;
+}
+.row{
+display: flex;
+justify-content: space-around;
+font-weight: bolder;
+width: 100%;
+font-size: 2vw;
+}
+
+
+.shopping-cart-price{
+margin-left: 120px;
+}
+
+.shoppingCartItem{
+display: flex;
+flex-flow: column wrap;
+align-items: center;
+justify-content:space-between;
+width: 100%;
+
+
+
+}
+.shoppingCartItem > .col-2{
+margin-right: 130px;
+}
+.shopping-cart-item{
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+align-content: center;
+justify-content: center;
+align-items: center;
+}
+
+.shopping-cart-total{
+display: flex;
+align-items: baseline;
+flex-flow: row;
+width: 100%;
+
+}
+.shoppingCartTotal{
+margin-left: 30px;
+margin-right: 30px;
+}
+.comprarButton{
+width: 42%;
+padding: 5px;
+text-align: center;
+background-color: var(--second-color);
+border: none;
+font-size: 9px;
+text-transform: uppercase;
+letter-spacing: 1px;
+cursor: pointer;
+border-radius: 5px;
+transition: all 0.5s;
+color: #fff;
+text-align: center;
+}
 
 .suscribe {
 display: flex;
@@ -465,7 +555,6 @@ scroll-behavior: smooth;
 header {
 display: flex;
 flex-flow: row wrap;
-width: 100vw;
 justify-content: flex-start;
 align-items: center;
 position: sticky;
@@ -476,14 +565,23 @@ background-color: #fff;
 
 .nav-img {
 display: flex;
-justify-content: center;
+flex-flow: row wrap;
+justify-content: space-evenly;
 width: 40%;
+align-items:center;
+}
+.nav-img > img{
+order: 1;
+}
+.nav-img > a{
+margin-top: 10px;
+margin-left: 50px;
 }
 .nav-enlaces {
 display: flex;
 justify-content: center;
 align-items: center;
-width: 40%;
+width: 50%;
 }
 
 ul > li > a {
@@ -511,14 +609,14 @@ display: flex;
 flex-flow: column;
 justify-content: center;
 flex-grow: 1;
-width: 100vw;
+width: 99.8%;
 }
 .main-section {
 display: flex;
 justify-content: center;
 align-items: center;
-width: 100%;
 height: 100vh;
+width: 100%;
 background: url(./img/wallpaper2.jpg), rgba(0, 0, 0, 30%);
 background-blend-mode: multiply;
 background-size: cover;
@@ -528,7 +626,6 @@ background-attachment: fixed;
 
 .text-principal {
 display: flex;
-width: 100%;
 flex-flow: column wrap;
 }
 
@@ -548,7 +645,7 @@ font-weight: bolder;
 .menu {
 display: flex;
 flex-flow: row wrap;
-width: 100vw;
+width: 100%;
 justify-content: center;
 align-items: center;
 }
@@ -565,7 +662,7 @@ align-items: center;
 justify-content: center;
 align-content: center;
 flex-direction: row;
-width: 100vw;
+width: 100%;
 
 }
 .products > h1 {
@@ -635,7 +732,7 @@ color: black;
 background: url(./img/section.jpg), rgba(0, 0, 0, 45%);
 background-blend-mode: multiply;
 background-size: cover;
-width: 100vw;
+width: 100%;
 height: 70vh;
 background-attachment: fixed;
 margin-top: 50px;
@@ -651,7 +748,7 @@ text-shadow: 5px 0 10px #000;
 .fav-tittle {
 display: flex;
 justify-content: center;
-width: 100vw;
+width: 100%;
 margin-top: 50px;
 margin-bottom: 50px;
 }
@@ -666,7 +763,7 @@ display: flex;
 justify-content: space-evenly;
 flex-wrap: wrap;
 flex-direction: row;
-width: 100vw;
+width: 100%;
 }
 
 .relevant-container {
@@ -762,27 +859,30 @@ align-self: flex-start;
 
 /* CARRITO */
 .shopping-cart{
-    display: flex;
-    flex-flow: column wrap;
-    align-self: center;
-    justify-self: center;
-    width: 100vw;
+display: flex;
+flex-flow: column wrap;
+background-color: var(--first-color);
+color: #fff;
+width: 100%;
 }
 .shopping-cart > .container{
-    display: flex;
-    flex-flow: column wrap;
-    width: 100%;
+display: flex;
+flex-flow: column wrap;
+width: 100%;
+
 
 }
 .text-center {
-    display: inherit;
-    justify-content: center;
+display: inherit;
+justify-content: center;
+width: 100%;
 }
 .row{
-    display: inherit;
-    justify-content: space-around;
-    font-weight: bolder;
-    font-size: 2vw;
+display: flex;
+justify-content: space-around;
+font-weight: bolder;
+width: 100%;
+font-size: 2vw;
 }
 
 
@@ -791,19 +891,53 @@ margin-left: 120px;
 }
 
 .shoppingCartItem{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
+display: flex;
+flex-flow: row wrap;
+align-items: center;
+justify-content:center;
+width: 100%;
+margin-bottom: 20px;
+
+
 
 
 }
+.shoppingCartItem > .col-2{
+margin-right: 130px;
+}
+.shopping-cart-item{
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+align-content: center;
+justify-content: center;
+align-items: center;
+}
 
 .shopping-cart-total{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    width: 60vw;
+display: flex;
+flex-flow: row wrap;
+width: 100%;
 
+}
+.shoppingCartTotal{
+margin-left: 30px;
+margin-right: 30px;
+}
+.comprarButton{
+width: 100px;
+padding: 10px;
+text-align: center;
+background-color: var(--second-color);
+border: none;
+font-size: 13px;
+text-transform: uppercase;
+letter-spacing: 1px;
+cursor: pointer;
+border-radius: 5px;
+transition: all 0.5s;
+color: #fff;
+text-align: center;
 }
 
 .suscribe {
@@ -811,7 +945,7 @@ display: flex;
 flex-wrap: wrap;
 align-items: center;
 justify-content: center;
-width: 100vw;
+width: 100%;
 height: 50vh;
 background: var(--black-color);
 }
@@ -872,5 +1006,4 @@ transition: all 0.5s;
 footer > div > a:hover {
 font-size: 40px;
 }
-
 }
