--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,24 @@ order: -1;
 .nav-img > a:visited{
 color: var(--black-color);
 }
+.panel-btn{
+    position: fixed;
+    z-index: 999;
+    bottom: 1vh;
+    right: 1vw;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    color: #fff;
+    background-color: var(--second-color);
+    cursor: pointer;
+}
+
 .nav-enlaces {
 display: flex;
 justify-content: center;
@@ -390,13 +408,33 @@ font-size: 40px;
 display: flex;
 margin-top: 8px;
 }
+
+.panel{
+    display: flex;
+    position: fixed;
+    z-index: 998;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /*Arriba*/
+    transform: translateY(-100%);
+    transition: all .5s ease;
+}
+
+.panel.is-active{
+    transform: translateX(0);
+}
+
 /* CARRITO */
 .shopping-cart{
 display: flex;
 flex-flow: column wrap;
-background-color: var(--first-color);
 color: #fff;
 width: 100%;
+background-color: #000000;
+opacity: 0.9;
 }
 .shopping-cart > .container{
 display: flex;
@@ -430,6 +468,7 @@ flex-flow: column wrap;
 align-items: center;
 justify-content:space-between;
 width: 100%;
+margin-bottom: 20px;
 
 
 
@@ -577,6 +616,24 @@ order: 1;
 .nav-img > a{
 margin-top: 10px;
 margin-left: 50px;
+}
+
+.panel-btn{
+    position: fixed;
+    z-index: 999;
+    bottom: 1vh;
+    border: 1px solid black;
+    right: 1vw;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    align-items: center;
+    background-color: var(--first-color);
+    cursor: pointer;
 }
 .nav-enlaces {
 display: flex;
@@ -837,6 +894,24 @@ width: 100%;
 text-align: justify;
 margin: 20px 0;
 }
+.panel{
+    display: flex;
+    position: fixed;
+    z-index: 998;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /*Arriba*/
+   transform: translateY(-100%);
+    transition: all .5s ease;
+}
+.panel.is-active{
+    transform: translateX(0);
+
+}
+
 
 .footer-rel {
 display: flex;
@@ -862,9 +937,12 @@ align-self: flex-start;
 .shopping-cart{
 display: flex;
 flex-flow: column wrap;
-background-color: var(--first-color);
 color: #fff;
 width: 100%;
+background-color: #000000;
+opacity: 0.9;
+margin-top: 60px;
+
 }
 .shopping-cart > .container{
 display: flex;
@@ -941,7 +1019,9 @@ border-radius: 5px;
 transition: all 0.5s;
 color: #fff;
 text-align: center;
+
 }
+
 
 .suscribe {
 display: flex;
